--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 ultralytics
-albumentations
-optuna 
-huggingface_hub
+albumentations==2.0.5
+optuna==4.2.1
+huggingface-hub==0.30.2
+torchmetrics==1.7.1
+lmdb==1.6.2
+msgpack==1.1.0
+opencv-python==4.11.0.86
+torch==2.6.0
+torchvision==0.21.0
+numpy==2.2.4
+tqdm==4.67.1
