--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ ultralytics
 albumentations==2.0.5
 optuna==4.2.1
 huggingface-hub==0.30.2
-torchmetrics==1.7.1
 lmdb==1.6.2
 msgpack==1.1.0
 opencv-python==4.11.0.86
 tqdm==4.67.1
 numpy
+torchmetrics
 # numpy==2.2.4
+# torchmetrics==1.7.1
