--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ultralytics
-albumentations==2.0.5
-optuna==4.2.1
-huggingface-hub==0.30.2
+ultralytics==8.3.97
+albumentations
+optuna
+huggingface_hub
